# GaugeReader

./: CMakeLists.txt  README.md  reader.cpp  reader.hpp  yolov5ncnn_jni.cpp
